--- a/style.css
+++ b/style.css
@@ -76,6 +76,12 @@ transition: .25s ease;
     text-transform: uppercase;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+.nav a:hover{color: rgb(255,76,124);
+    padding:2px;
+    border-radius: 10px;
+    transition: 1sec ease;
+}
+    
 .banner{
     background-image: url(images/cover.jpg);
     background-position: center;
@@ -167,5 +173,5 @@ font-size: 40px;
 .wrapper a:hover{
     background-color: white;
     color:rgb(141, 28, 47);
-  font-size: 20px bold;
+  font-size: 20px bold; 
 }
